feat: edit removeProduct to change activeStatus instead of delete it, add activeStatus when create new product, add 'active' query params in findAllProduct
